@@ -144,6 +144,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DefaultUrlBuilderTestCase.cs" />
+    <Compile Include="DefaultViewComponentRegistryTests.cs" />
     <Compile Include="Helpers\AbstractHelperTestCase.cs" />
     <Compile Include="Helpers\ScriptaculousHelperTestCase.cs" />
     <Compile Include="Helpers\TextHelperTestCase.cs" />
