@@ -42,10 +42,16 @@ namespace Castle.MonoRail.Framework.Services
 		private String[] assemblies;
 
 		/// <summary>
+		/// A dictionary of name to ViewComponent
+		/// </summary>
+		private IViewComponentRegistry registry;
+
+		/// <summary>
 		/// Constructs a <c>DefaultViewComponentFactory</c>
 		/// </summary>
-		public DefaultViewComponentFactory() : base()
+		public DefaultViewComponentFactory()
 		{
+			registry = new DefaultViewComponentRegistry();
 		}
 		
 		#region IInitializable implementation
@@ -69,6 +75,11 @@ namespace Castle.MonoRail.Framework.Services
 		}
 		
 		#endregion
+
+		protected override IViewComponentRegistry GetViewComponentRegistry()
+		{
+			return registry;
+		}
 
 		public override void Service(IServiceProvider provider)
 		{
