@@ -14,14 +14,15 @@
 
 namespace TestSiteWindsor.Controllers
 {
-	using System;
-
 	using Castle.MonoRail.Framework;
-
 
 	public class HomeController : Controller
 	{
 		public void Index()
+		{
+		}
+
+		public void BuiltinComponentTest()
 		{
 		}
 
